Fix overview background colour transparency
Change to general background colour did not take overview into account;
transparency was too high.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -36,10 +36,13 @@ $port-target: #999;
 
 $mount-button: #824747;
 
+$url-hover-color: #3798db99;
+
 $modal-background-color: #00000099;
 $modal-background-hover-color: #000000aa;
 
-$url-hover-color: #3798db99;
+$overview-background-color: #222222;
+
 $button-background-hover-color: #374f5a33;
 $background-color: #22222299;
 $background-color-secondary: #333;
