--- a/app/files/css/overview.scss
+++ b/app/files/css/overview.scss
@@ -97,7 +97,7 @@
   position: sticky;
   top: 0;
   z-index: 100;
-  background-color: $background-color;
+  background-color: $overview-background-color;
   width: 100%;
   height: $overview-height;
   transition: opacity 0.5s ease;
